force-app/main/default/objects/Flat_Rate_Enrollment__c/Flat_Rate_Enrollment__c.object-meta.xml
<CustomObject>
    <label>Flat Rate Enrollment</label>
    <nameField>
        <displayFormat>{YY}-{0000}</displayFormat>
        <label>Flat Rate Enrollment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flat Rate Enrollments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>