force-app/main/default/objects/Flat_Rate_Enrollment__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>HYPERLINK(&apos;/&apos; + Training_Flat_Rate__r.Account__r.Id , Training_Flat_Rate__r.Account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>