force-app/main/default/objects/Flat_Rate_Enrollment__c/fields/Status_Particular__c.field-meta.xml
<CustomField>
    <fullName>Status_Particular__c</fullName>
    <label>Status Particular</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Interesado</fullName>
            </value>
            <value>
                <fullName>Pago Pendiente</fullName>
            </value>
            <value>
                <fullName>Matriculado (justificante enviado)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>