force-app/main/default/objects/Flat_Rate_Enrollment__c/fields/Student__c.field-meta.xml
<CustomField>
    <fullName>Student__c</fullName>
    <label>Student</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Flat Rate Enrollments</relationshipLabel>
    <relationshipName>Flat_Rate_Enrollments</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>