force-app/main/default/objects/Flat_Rate_Enrollment__c/fields/Training_Flat_Rate__c.field-meta.xml
<CustomField>
    <fullName>Training_Flat_Rate__c</fullName>
    <label>Training Flat Rate</label>
    <referenceTo>Training_Flat_Rate__c</referenceTo>
    <relationshipLabel>Flat Rate Enrollments</relationshipLabel>
    <relationshipName>Flat_Rate_Enrollments</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>