force-app/main/default/objects/Flat_Rate_Enrollment__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Invoice_sent__c</columns>
    <columns>Account__c</columns>
    <columns>Paid__c</columns>
    <columns>Status_Particular__c</columns>
    <columns>Student__c</columns>
    <columns>Training_Flat_Rate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>